# life-assistant-agent-app

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
client/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
client/src/: proxy.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(protected)/dashboard/: page.tsx
client/src/app/(protected)/my-dashboard/: page.tsx
client/src/app/(public)/: page.tsx
client/src/app/(public)/articles/: page.tsx
client/src/app/(public)/landingPage/: page.tsx
client/src/app/(public)/sign-in/[[...sign-in]]/: page.tsx
client/src/app/(public)/sign-up/[[...sign-up]]/: page.tsx
client/src/app/api/health/: route.ts
client/src/components/: ProtectedComponent.tsx
client/src/components/layout/: Footer.tsx  Header.tsx
client/src/components/ui/: ThemeToggle.tsx
client/src/contexts/: ThemeContext.tsx
server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
server/alembic/: env.py
server/app/: config.py  main.py
server/app/api/routes/: private.py  protected.py  public.py
server/app/api/v1/: llm.py  router.py
server/app/auth/: clerk_auth.py
server/app/core/: dependencies.py  security.py
server/app/domain/llm/: service.py
server/app/infrastructure/db/: models.py  session.py
server/app/infrastructure/llm_client/: openai_client.py
server/app/services/: user_service.py
