[project]
name = "backend"
version = "0.1.0"
description = "life assistant agent app for backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "annotated-types>=0.6.0",
    "sqlalchemy>=2.0.45",
    "openai>=2.9.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "alembic>=1.17.2",
    "mako>=1.3.0",
]
